fix bad padding on mobile

--- a/src/app/footer/Footer.mq.sass
+++ b/src/app/footer/Footer.mq.sass
@@ -9,12 +9,16 @@
     font-size: 12px
 
 @media (max-width: $max-width-l)
+  .footer-top,
+  .footer-bottom
+    padding: 15px 15px 0 15px
+
   .footer-info
     align-items: center
     display: flex
     flex-direction: column
     justify-content: center
-    margin-top: 30px
+    margin: 30px 0
     order: 1
     text-align: center
 
@@ -23,5 +27,5 @@
     flex-direction: column
 
   .footer-bottom
-    padding: 0 30px
+    padding: 0 15px 15px 15px
 
