--- a/src/app/tile/Tile.mq.sass
+++ b/src/app/tile/Tile.mq.sass
@@ -11,7 +11,7 @@
 @media (max-width: $max-width-l)
   %tile-text
     font-size: 13px
-    padding: 0 30px
+    padding: 0 15px
 
     ul
       list-style-image: inherit
